<resources>
    <string name="app_name">Mandarin Learning</string>
    <string name="app_name_alt">Chinese learning</string>
    <string name="slogan">Learn chinese everytime, everywhere :D</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Enter your name</string>
    <string name="password_hint">Password</string>
    <string name="current_password_hint">Your current password</string>
    <string name="new_password_hint">Your new password</string>
    <string name="re_new_password_hint">Re-enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Create a new account</string>
    <string name="forget_1">"Or "</string>
    <string name="forget_2"> click here </string>
    <string name="forget_3">" to reset your password"</string>
    <string name="copyright">tuantruongdev © 2022 all rights reserved</string>

    <string name="on_login_failed">Email or password is incorrect</string>
    <string name="on_signup_failed">This email has been linked with another account</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>

    <string name="title_home">Dictionary</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_ocr">Text detection &amp; translate</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_user">User &amp; backup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter character to lookup</string>
    <string name="search_hint_favorite">Find your favorite words</string>
    <string name="empty_hint">You don\'t have any data yet!</string>
    <string name="query_error_hint">Something went wrong, make sure you entered correct character</string>
    <string name="save_character">Saved your character to favorite list</string>
    <string name="error_network">Something went wrong, try again later</string>
    <string name="please_wait">Please wait a bit...</string>
    <string name="remove_save_character">Hope you not going to forget it</string>
    <string name="try_again">try again</string>
    <string name="request_camera_permission_failed">Camera permission declined ;(</string>
    <string name="request_album_permission_failed">Album permission declined ;(</string>
    <string name="quiz_hint">Select HSK level for your quiz</string>
    <string name="time_hint">Select how many question you want</string>
    <string name="word_for_hsk">"Word for HSK level "</string>
    <string name="start_quiz">Start quiz!</string>
    <string name="quiz_play_title">Play quiz</string>
    <string name="quiz_loading">Loading your quiz..</string>
    <string name="quiz_done">Nice try</string>
    <string name="quiz_congratulation">"Congratulation, your total point is: "</string>
    <string name="quiz_try_again">Try again!</string>
    <string name="quiz_question">"Which one word mean "</string>
    <string name="quiz_type">Multiple choice quiz</string>
    <string name="quiz_type_true_or_false">True or False quiz</string>
    <string name="quiz_type_fill_in_the_blank">Fill in the blank</string>
    <string name="question_pack_5">5 question pack</string>
    <string name="question_pack_10">10 question pack</string>
    <string name="question_pack_15">15 question pack</string>

    <string name="question_pack_5_time">3 minute</string>
    <string name="question_pack_10_time">5 minute</string>
    <string name="question_pack_15_time">8 minute</string>

    <string name="question_easy">easy</string>
    <string name="question_medium">medium</string>
    <string name="question_hard">hard</string>

    <string name="hsk_1">HSK 1</string>
    <string name="hsk_2">HSK 2</string>
    <string name="hsk_3">HSK 3</string>
    <string name="hsk_4">HSK 4</string>
    <string name="hsk_5">HSK 5</string>
    <string name="hsk_6">HSK 6</string>

    <string name="no_favorite_word">You don\'t have any favorite word</string>
    <string name="share_hint">Share this QR code to your friend to share your favorite list!</string>
    <string name="qr_scan_hint">Scan a QR code to import words</string>
    <string name="sync_success">Sync your list successfully</string>
    <string name="sync_failed">Something went wrong, try again!</string>
    <string name="hello">"Hello, "</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="backup">Backup saved words</string>
    <string name="load">Load saved words</string>
    <string name="not_logged_in">You\'re not logged in</string>
    <string name="traditional">traditional</string>
    <string name="definitions">Definitions</string>
    <string name="examples">Examples</string>

</resources>