<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/extra_margin_top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_med"
            android:lines="1"
            android:text="@string/app_name_alt"
            android:textAllCaps="true"
            android:textColor="@color/light"
            android:textSize="@dimen/login_app_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/slogan"
            android:textColor="@color/light"
            android:textSize="@dimen/input_text_size" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/extra_padding_bottom_negative"
        app:cardBackgroundColor="@color/milk"
        app:cardCornerRadius="@dimen/login_card_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_extra_large"
            android:paddingBottom="@dimen/extra_padding_bottom">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                app:cardCornerRadius="@dimen/margin_large"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light"
                    android:drawableLeft="@drawable/ic_outline_account_circle_24"
                    android:drawablePadding="@dimen/margin_med"
                    android:hint="@string/username_hint"
                    android:padding="@dimen/margin_large"
                    android:text=""
                    android:textSize="@dimen/input_text_size"
                    app:cardElevation="0dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                app:cardCornerRadius="@dimen/margin_large"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light"
                    android:drawableLeft="@drawable/ic_baseline_lock_open_24"
                    android:drawablePadding="@dimen/margin_med"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:padding="@dimen/margin_large"
                    android:text=""
                    android:textSize="@dimen/input_text_size" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginRight="@dimen/margin_extra_large"
                android:text="User not correct"
                android:textColor="@color/red_down"
                android:visibility="gone" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_extra_large"
                android:backgroundTint="@color/main_color"
                android:padding="@dimen/margin_large"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginRight="@dimen/margin_extra_large"
                android:backgroundTint="@color/green_success"
                android:padding="@dimen/margin_large"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_med"
                android:layout_marginRight="@dimen/margin_large">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_1" />

                <TextView
                    android:id="@+id/forgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_2"
                    android:textColor="@color/main_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_3" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:layout_marginRight="@dimen/margin_large"
                android:text="@string/copyright" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>